--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,15 @@ script:
   # We use the docker image from https://hub.docker.com/r/dxjoke/tectonic-docker/
   # Compiling only main.tex:
   - docker run --mount src=$TRAVIS_BUILD_DIR,target=/usr/src/tex,type=bind dxjoke/tectonic-docker /bin/sh -c "tectonic IPCookbook.tex"
-  # Compiling multiple files as well as using biber:
-#  - docker run --mount src=$TRAVIS_BUILD_DIR/src,target=/usr/src/tex,type=bind dxjoke/tectonic-docker /bin/sh -c "tectonic --keep-intermediates --reruns 0 biber-mwe.tex; biber biber-mwe; tectonic biber-mwe.tex; tectonic main.tex"
+  
+after_success:
+  - git clone https://github.com/ferreolS/InverseProblemsCookbook pdf
+  - cd pdf
+  - git symbolic-ref HEAD refs/heads/gh-pages  # auto-switches branches to gh-pages
+  - rm .git/index
+  - git clean -fdx
+  - mv ../IPCookbook.pdf .
+  - git add *
+  - git commit -a -m "Add Doc"
+  - git push --force  https://${GH_TOKEN}@github.com/ferreolS/InverseProblemsCookbook gh-pages
+  
