--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: generic
 services: docker
 
 before_script:
-- git config --global user.email "ferreol.soulez@univ-lyon1.fr"
-- git config --global user.name "ferreolS"
 - sudo apt-get -y install pdf2svg
 
 script:
@@ -11,15 +9,15 @@ script:
   # Compiling only main.tex:
   - docker run --mount src=$TRAVIS_BUILD_DIR,target=/usr/src/tex,type=bind dxjoke/tectonic-docker /bin/sh -c "tectonic IPCookbook.tex"
   - pdf2svg IPCookbook.pdf IPCookbook%d.svg all
-  
-after_success:
-  - git clone https://github.com/FerreolS/InverseProblemsCookbook pdf
-  - cd pdf
-  - git symbolic-ref HEAD refs/heads/gh-pages  # auto-switches branches to gh-pages
-  - rm .git/index
-  - git clean -fdx
-  - mv ../*{.svg,.pdf} .
-  - git add *
-  - git commit -a -m "Add Doc"
-  - git push --force  https://${GH_TOKEN}@github.com/FerreolS/InverseProblemsCookbook gh-pages
-  
+  - mkdir pdf
+  - mv *{.svg,.pdf} pdf/.
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GH_TOKEN
+  local_dir: pdf
+  committer_from_gh: true
+  on:
+    branch: master
+    
