--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   skip_cleanup: true
   github_token: $GH_TOKEN
   local_dir: pdf
-  committer_from_gh: true
+  committer-from-gh: true
   on:
     branch: master
     
